devops-demo-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops
  labels:
    app: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
        - name: devops
          image: nizamsk/devops-integration:latest
          ports:
            - containerPort: 9001
