devops-demo-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-project-service
  labels:
    app: demo-project
spec:
  selector:
    app: demo-project
  ports:
    - protocol: TCP
      port: 80          # Service port exposed inside the cluster
      targetPort: 9001  # Container port your app listens on
      nodePort: 30080   # NodePort in the range 30000-32767
  type: NodePort
